--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@keystone-6/document-renderer": "^1.1.2",
     "graphql-request": "^7.1.2",
+    "hamburger-react": "^2.5.1",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
