--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
 **/node_modules
 .envrc
 *.db
+*.sqlite3
+
+*.log
+*.pot
+*.pyc
+__pycache__
+db.sqlite3
+media
+
+
+
+.Python build/ 
+develop-eggs/ 
+dist/ 
+downloads/ 
+eggs/ 
+.eggs/ 
+lib/ 
+lib64/ 
+parts/ 
+sdist/ 
+var/ 
+wheels/ 
+*.whl
+*.egg-info/ 
+.installed.cfg 
+*.egg 
+*.manifest 
+*.spec 
