--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.7
 cloudinary==1.41.0
 cookiecutter==2.6.0
 Django==5.1.4
+django-jazzmin==3.0.1
 django-tailwind==3.8.0
 django-tinymce==4.1.0
 idna==3.10
