--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,20 @@ wheels/
 *.egg 
 *.manifest 
 *.spec 
+
+
+# Installer logs 
+pip-log.txt 
+pip-delete-this-directory.txt 
+
+# Unit test / coverage reports 
+htmlcov/ 
+.tox/ 
+.coverage 
+.coverage.* 
+.cache 
+.pytest_cache/ 
+nosetests.xml 
+coverage.xml 
+*.cover 
+.hypothesis/ 
