--- a/requirements.txt
+++ b/requirements.txt
@@ -6,24 +6,33 @@ chardet==5.2.0
 charset-normalizer==3.4.0
 click==8.1.7
 cloudinary==1.41.0
+colorama==0.4.6
 cookiecutter==2.6.0
+cssbeautifier==1.15.1
 Django==5.1.4
 django-jazzmin==3.0.1
 django-tailwind==3.8.0
 django-tinymce==4.1.0
+djlint==1.36.4
+EditorConfig==0.17.0
 idna==3.10
 Jinja2==3.1.4
+jsbeautifier==1.15.1
+json5==0.10.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+pathspec==0.12.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
 PyYAML==6.0.2
+regex==2024.11.6
 requests==2.32.3
 rich==13.9.4
 six==1.17.0
 sqlparse==0.5.3
 text-unidecode==1.3
+tqdm==4.67.1
 types-python-dateutil==2.9.0.20241206
 urllib3==2.2.3
