--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-tailwind==3.8.0
 django-tinymce==4.1.0
 djlint==1.36.4
 EditorConfig==0.17.0
+gunicorn==23.0.0
 idna==3.10
 Jinja2==3.1.4
 jsbeautifier==1.15.1
@@ -22,6 +23,7 @@ json5==0.10.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+packaging==24.2
 pathspec==0.12.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
