--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 arrow==1.3.0
 asgiref==3.8.1
 binaryornot==0.4.4
+Brotli==1.1.0
 certifi==2024.12.14
 chardet==5.2.0
 charset-normalizer==3.4.1
@@ -40,3 +41,4 @@ text-unidecode==1.3
 tqdm==4.67.1
 types-python-dateutil==2.9.0.20241206
 urllib3==1.26.20
+whitenoise==6.8.2
