--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,10 @@ cloudinary==1.41.0
 colorama==0.4.6
 cookiecutter==2.6.0
 cssbeautifier==1.15.1
+debugpy==1.8.11
 Django==5.1.4
+django-cotton==1.5.3
+django-debug-toolbar==4.4.6
 django-jazzmin==3.0.1
 django-tailwind==3.8.0
 django-tinymce==4.1.0
